# AobaAPI

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: AobaAPI.cpp  CMakeLists.txt
src/Core/: CMakeLists.txt  Mesh.h
src/Core/EulerOps/: CMakeLists.txt  DissolveEdge.cpp  EdgeSplit.cpp  EdgeSqueeze.cpp  GlueEdge.cpp  GlueFace.cpp  GlueVert.cpp  JoinMesh.cpp  KillEdge.cpp  KillFace.cpp  KillMesh.cpp  KillVert.cpp  MakeEdge.cpp  MakeEdgeVert.cpp  MakeFace.cpp  MakeLoop.cpp  MakeVert.cpp  ManifoldMakeEdge.cpp  ValidateLoop.cpp
src/Core/MemPool/: CMakeLists.txt  MemPool.cpp  MemPoolBitSet.cpp  MemPoolChunk.cpp
src/Core/Mesh/: CMakeLists.txt  Edge.cpp  Face.cpp  Loop.cpp  Mesh.cpp  Vert.cpp
src/IO/: CMakeLists.txt  ExportObj.cpp  ExportStl.cpp  IndexMesh.cpp
src/Math/: CMakeLists.txt
src/Math/Matrix/: CMakeLists.txt  Matrix2.cpp  Matrix3.cpp  Matrix4.cpp
src/Math/Vector/: CmakeLists.txt  Vector2.cpp  Vector3.cpp  Vector4.cpp
src/Ops/: CMakeLists.txt
src/Ops/Create/: CMakeLists.txt  CreateCircle.cpp  CreateCube.cpp  CreateGrid.cpp  CreateUVSphere.cpp  CreateVert.cpp
src/Ops/Modify/: CMakeLists.txt  Delete.cpp  Duplicate.cpp  ExtrudeEdges.cpp  ExtrudeFaceRegion.cpp  ExtrudeFaces.cpp  ExtrudeVerts.cpp  InsetFaces.cpp  MakeFace.cpp  Mirror.cpp  RecalculateFaceNormals.cpp  ReverseFaceOrder.cpp  SplitEdges.cpp  SubdivideSimple.cpp  SubdivideSmooth.cpp  TriangulateFaces.cpp
src/Ops/Select/: CMakeLists.txt  SelectExtend.cpp  SelectFromEdges.cpp  SelectFromFaces.cpp  SelectFromVerts.cpp  SelectReduce.cpp
src/Ops/Transform/: CMakeLists.txt  (+4 more)
(+33 files in other folders)
